# rubric

./: .envrc  .gitignore  LinkedIn Professional Context.md  README.md  evaluation.py  evaluations.csv  evaluations.jsonl  main.py  mixin.py  partners.py  pyproject.toml  score.py
dev/: titles.py
src/rubric/: evaluation.py  load.py  mixin.py  partners.py  score.py
