[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rubric"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbclients",
    "conduit",
    "chromadb==1.1.1",  # Exact match
    "conduit",
    "kramer",
    "markdown2>=2.5.4",
    "motor>=3.7.1",
    "pandas>=2.3.1",
    "pymongo>=4.14.0",
    "rapidfuzz>=3.13.0",
    "rerankers>=0.10.0",
    "sentence-transformers>=5.1.0",
    "trino>=0.335.0",
]

# Hatchling configuration (replaces setuptools.packages.find)
[tool.hatch.build.targets.wheel]
packages = ["src/rubric"]
source = ["src"]
include = ["src/rubric/py.typed"]

[tool.uv.sources]
dbclients = { path = "../dbclients-project", editable = true }
conduit = { path = "../conduit-project", editable = true }
kramer = { path = "../kramer-project", editable = true }

[project.scripts]
score = "rubric.score:main"
